[build-system]
requires = [
    "setuptools>=61.2",
    "Cython",
    "cysignals",
    "gmpy2>=2.1.0b1",
]
build-backend = "setuptools.build_meta"

[project]
name = "pplpy"
description = "Python PPL wrapper"
readme = "README.rst"
authors = [{name = "Vincent Delecroix", email = "vincent.delecroix@labri.fr"}]
license = {text = "GPL v3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "polyhedron",
    "polytope",
    "convex",
    "mathematics",
    "ppl",
    "milp",
    "linear-programming",
]
dependencies = [
    "cysignals",
    "gmpy2>=2.1.0b1",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/sagemath/pplpy"
Download = "https://pypi.org/project/pplpy/#files"

[tool.setuptools]
packages = ["ppl"]
platforms = ["any"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "ppl.__version__"}

[tool.setuptools.package-data]
ppl = ["*.pxd", "*.h", "*.hh"]
