[metadata]
name = pplpy
version = 0.8.8
description = Python PPL wrapper
long_description = file: README.rst
author = Vincent Delecroix
author_email = vincent.delecroix@labri.fr
url = https://github.com/sagemath/pplpy
download_url = https://pypi.org/project/pplpy/#files
license = GPL v3
platforms = any
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C++
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Operating System :: Unix
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    polyhedron
    polytope
    convex
    mathematics
    ppl
    milp
    linear-programming

[options]
packages = ppl

[options.package_data]
ppl = *.pxd, *.h, *.hh
